--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </label>
                           </div>
                           <div class="md:w-2/3">
-                            <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" type="text">
+                            <input id='incomeTotal' class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" type="text">
                           </div>
                         </div>
                         <!-- Expenses Section -->
@@ -53,7 +53,7 @@
                             </label>
                           </div>
                           <div class="md:w-2/3">
-                            <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
+                            <input id="Food-price" class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
                           </div>
                         </div>
                         <!-- rent Section -->
@@ -64,7 +64,7 @@
                             </label>
                           </div>
                           <div class="md:w-2/3">
-                            <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
+                            <input id="Rent-Total" class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
                           </div>
                         </div>
                         <!-- Clothes Section -->
@@ -75,40 +75,40 @@
                             </label>
                           </div>
                           <div class="md:w-2/3">
-                            <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
+                            <input id='clothes-total' class="bg-white-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
                           </div>
                         </div>
                         <!-- Calculate Button Section -->
                         <div class="md:flex md:items-center">
                           <div class="md:w-1/3"></div>
                           <div class="md:w-2/3">
-                            <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-8 rounded" type="button">
+                            <button id="calulate-total" class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-8 rounded" type="button">
                               Calculate
                             </button>
                           </div>
                         </div>
                         <!-- Total Expenses section -->
                         <div>
-                            <h1 class="text-xl font-semibold text-center mt-10">Total Expenses:</h1>
+                            <h1 class="text-xl font-semibold text-center mt-10">Total Expenses: <span id="total-expenses"></span></h1>
                         </div>
                         <div>
-                            <h1 class="text-xl font-semibold text-center mt-10">Balance:</h1>
+                            <h1 class="text-xl font-semibold text-center mt-10">Balance:<span id="total-balance"></span></h1>
                         </div>
                         <!-- divided section -->
                         <div class="p-2">
                             <div class="md:flex md:items-center mb-6">
-                                <div class="md:w-1/3  sm:1/6">
+                                <div class="md:w-1/3">
                                   <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
                                     Save:
                                   </label>
                                 </div>
-                                <div class="md:w-1/5 sm:1/6">
-                                  <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded md:w-full sm:1/6 py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
+                                <div class="md:w-1/5">
+                                  <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded md:w-full sm:w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
                                 </div>
                                 <div>
                                     <span class="text-2xl md:ml-10 sm:text-center">%</span>
                                 </div>
-                                <div class=" sm:1/6  md:w-1/5 ml-16">
+                                <div class="md:w-1/5 ml-16">
                                     <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-8 rounded" type="button">
                                       Save
                                     </button>
@@ -129,5 +129,6 @@
           
         </section>
     </main>
+    <script src="javascript/javascripts.js"></script>
   </body>
 </html>
