--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                                   </label>
                                 </div>
                                 <div class="md:w-1/5">
-                                  <input class="bg-white-200 appearance-none border-2 border-gray-200 rounded md:w-full sm:w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
+                                  <input id="save-input" class="bg-white-200 appearance-none border-2 border-gray-200 rounded md:w-full sm:w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"type="text">
                                 </div>
                                 <div>
                                     <span class="text-2xl md:ml-10 sm:text-center">%</span>
                                 </div>
                                 <div class="md:w-1/5 ml-16">
-                                    <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-8 rounded" type="button">
+                                    <button id="saved-button" class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-8 rounded" type="button">
                                       Save
                                     </button>
                                   </div>
@@ -118,10 +118,10 @@
                         </div>
                         <!-- saving Amount section -->
                         <div>
-                            <h1 class="text-xl font-semibold text-center mt-10">Saving Amount:</h1>
+                            <h1 class="text-xl font-semibold text-center mt-10">Saving Amount: <span id="save-amount"></span></h1>
                         </div>
                         <div>
-                            <h1 class="text-xl font-semibold text-center mt-10">Remainig Balance:</h1>
+                            <h1 class="text-xl font-semibold text-center mt-10">Remainig Balance: <span id="remaining-balance"></span></h1>
                         </div>
                       </form>
                 </div>
