html ui responsive done ande javascript basic part done,,,bonouse part after adding insah allah

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <body>
       <!-- Header Section -->
       <header>
-          <h1 class="text-5xl text-center m-16">Money <span class="text-cyan-600">income for me</span></h1>
+          <h1 class="text-5xl font-semibold text-center m-16">Money <span class="text-cyan-500">income for me</span></h1>
       </header>
       <!--  Main Section -->
     <main>
-        <section class="w-3/4 mx-auto p-12">
+        <section class="w-3/4 mx-auto p-2">
 
             <div class="grid md:grid-cols-2 sm:grid-cols-1 gap-4">
                 <div class="">
